Updated preprocessing notebook: Image Preprocessing loop now automatically covers training and validation sets.

--- a/data_preprocessing/data_preprocessing.ipynb
+++ b/data_preprocessing/data_preprocessing.ipynb
@@ -408,24 +408,20 @@
    },
    "source": [
     "### Step 4 - Image Preprocessing and Caching\n",
-    "#### (manually run for each split of the dataset)\n",
     "The core preprocessing loop:\n",
     "* Loads grayscale X-rays from a manifest (`index_xray_train.csv` or `index_xray_val.csv`)\n",
+    "* Resizes each image to the configured dimensions\n",
     "* Clips intensities to the `[P_LOW, P_HIGH]` percentiles, then normalizes to `[0,1]`\n",
     "* Saves compressed `.npz` caches (with `z=1` so future 3D code stays compatible)\n",
     "* Optionally writes PNG thumbnails for quick QC\n",
-    "* Records success/failure manifests\n",
+    "* Logs successes and failures in per-split manifest CSVs\n",
     "##### How to use\n",
-    "Run this cell twice:\n",
-    "1. Once with `INDEX_CSV` set to the training manifest.\n",
-    "1. Once with `INDEX_CSV` set to the validation manifest.\n",
-    "\n",
-    "Thumbnails live under `data_preprocessing/data/outputs/thumbs_xray_v*`, caches under `data_preprocessing/data/outputs/cache_xray_v*`"
+    "Running this cell once processes both the training and validation data automatically. Generated thumbnails are saved under `data_preprocessing/data/outputs/thumbs_xray_v*` and cached arrays will be under `data_preprocessing/data/outputs/cache_xray_v*`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -443,29 +439,7 @@
     "id": "_aghcub_empD",
     "outputId": "984a3b4a-2eaf-4a37-a747-3a0beaaf2ef8"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 400/400 [04:57<00:00,  1.35it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done. 400 ✅, 0 ❌\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- Step 4: Image preprocessing & caching ---\n",
     "# Reads images listed in INDEX_CSV, applies resize + percentile normalization,\n",
@@ -476,86 +450,91 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from PIL import Image\n",
+    "from pathlib import Path\n",
     "\n",
     "cfg = yaml.safe_load(open(CFG_PATH))\n",
-    "RESIZE_HW = tuple(cfg[\"xray\"][\"resize\"])\n",
+    "RESIZE_HW  = tuple(cfg[\"xray\"][\"resize\"])\n",
     "P_LOW, P_HIGH = cfg[\"xray\"][\"clip_percentile\"]\n",
-    "CACHE_DIR = PROJECT_ROOT / cfg[\"output\"][\"cache_dir\"]\n",
-    "THUMBS_DIR = PROJECT_ROOT / cfg[\"output\"][\"thumbs_dir\"]\n",
-    "MAKE_THUMBS = bool(cfg[\"output\"][\"make_thumbs\"])\n",
-    "MANI_TAG = cfg[\"output\"][\"manifest_tag\"]\n",
+    "BASE_CACHE_DIR  = (PROJECT_ROOT / cfg[\"output\"][\"cache_dir\"]).resolve()\n",
+    "BASE_THUMBS_DIR = (PROJECT_ROOT / cfg[\"output\"][\"thumbs_dir\"]).resolve()\n",
+    "MAKE_THUMBS     = bool(cfg[\"output\"][\"make_thumbs\"])\n",
+    "MANI_TAG        = cfg[\"output\"][\"manifest_tag\"]\n",
     "\n",
-    "# Ensure output dirs exist\n",
-    "CACHE_DIR.mkdir(parents=True, exist_ok=True)\n",
-    "THUMBS_DIR.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "# Run this cell twice: once for train, once for val.\n",
-    "# Choose which split to process by swapping CSV files below.\n",
-    "# `index_xray_train.csv` or `index_xray_val.csv`\n",
-    "INDEX_CSV = OUT_DIR / \"manifests\" / \"index_xray_val.csv\"\n",
-    "\n",
-    "df = pd.read_csv(INDEX_CSV)\n",
-    "\n",
-    "success, failures = [], []\n",
-    "\n",
-    "def smart_resize(img, target_hw):\n",
-    "  \"\"\"Edge-aware resize: AREA for downscale, CUBIC for upscale.\"\"\"\n",
-    "  h,w = img.shape[:2]; H,W = target_hw\n",
-    "  interp = cv2.INTER_AREA if (H < h or W < w) else cv2.INTER_CUBIC\n",
-    "  return cv2.resize(img, (W,H), interpolation=interp)\n",
-    "\n",
-    "for _, row in tqdm(df.iterrows(), total=len(df)):\n",
-    "  pid, pth = row[\"id\"], row[\"path\"]\n",
-    "  try:\n",
-    "    img = cv2.imread(pth, cv2.IMREAD_GRAYSCALE)\n",
-    "    if img is None:\n",
-    "      # Try OpenCV first; if it fails, fall back to PIL\n",
-    "      img = np.array(Image.open(pth).convert(\"L\"))\n",
-    "    if img is None or img.size == 0:\n",
-    "      raise RuntimeError(\"Cannot read image\")\n",
-    "\n",
-    "    # Resize and normalize intensity via percentile clipping\n",
-    "    img = smart_resize(img, RESIZE_HW)\n",
-    "    lo, hi = np.percentile(img, [P_LOW, P_HIGH])\n",
-    "    img = np.clip(img, lo, hi)\n",
-    "    img = (img - lo) / (hi - lo + 1e-6) # now in [0,1]\n",
-    "\n",
-    "    # Save cache as z,y,x with z=1 for 2D consistency\n",
-    "    out_npz = CACHE_DIR / f\"{pid}.npz\"\n",
-    "    np.savez_compressed(\n",
-    "        out_npz,\n",
-    "        volume=img[None, ...].astype(np.float32),\n",
-    "        meta=json.dumps({\n",
-    "            \"id\": pid,\n",
-    "            \"src\": pth,\n",
-    "            \"resize\": RESIZE_HW\n",
-    "            })\n",
-    "    )\n",
-    "\n",
-    "    # Optional QC thumbnail\n",
-    "    if MAKE_THUMBS:\n",
-    "      cv2.imwrite(str(THUMBS_DIR / f\"{pid}.png\"), (img*255).astype(\"uint8\"))\n",
-    "\n",
-    "    success.append({\"id\": pid, \"path\": pth, \"cache\": str(out_npz)})\n",
-    "\n",
-    "  except Exception as e:\n",
-    "    failures.append({\n",
-    "      \"id\": pid,\n",
-    "      \"path\": pth,\n",
-    "      \"error\": repr(e),\n",
-    "      \"traceback\": \"\".join(\n",
-    "          traceback.format_exception(type(e), e, e.__traceback__)\n",
-    "      )\n",
-    "    })\n",
-    "\n",
-    "# Write manifests once per run\n",
-    "mani_dir = OUT_DIR/\"manifests\"\n",
+    "# Shared dirs\n",
+    "mani_dir = OUT_DIR / \"manifests\"\n",
     "mani_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "pd.DataFrame(success).to_csv(mani_dir / f\"success_{MANI_TAG}.csv\", index=False)\n",
-    "pd.DataFrame(failures).to_csv(mani_dir / f\"fail_{MANI_TAG}.csv\", index=False)\n",
+    "def smart_resize(img: np.ndarray, target_hw: tuple[int, int]) -> np.ndarray:\n",
+    "    \"\"\"AREA for downscale, CUBIC for upscale (helps preserve edges).\"\"\"\n",
+    "    h, w = img.shape[:2]; H, W = target_hw\n",
+    "    interp = cv2.INTER_AREA if (H < h or W < w) else cv2.INTER_CUBIC\n",
+    "    return cv2.resize(img, (W, H), interpolation=interp)\n",
     "\n",
-    "print(f\"Done. {len(success)} ✅, {len(failures)} ❌\")"
+    "def preprocess_split(split_name: str, index_csv: Path) -> tuple[int, int]:\n",
+    "    \"\"\"Process one split given its manifest CSV. Returns (n_success, n_fail).\"\"\"\n",
+    "    if not index_csv.exists():\n",
+    "        print(f\"[{split_name}] manifest not found: {index_csv}\")\n",
+    "        return 0, 0\n",
+    "\n",
+    "    # Split-specific output subdirs to avoid collisions\n",
+    "    CACHE_DIR  = BASE_CACHE_DIR  / split_name\n",
+    "    THUMBS_DIR = BASE_THUMBS_DIR / split_name\n",
+    "    CACHE_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "    THUMBS_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    df = pd.read_csv(index_csv)\n",
+    "    success, failures = [], []\n",
+    "\n",
+    "    for _, row in tqdm(df.iterrows(), total=len(df), desc=f\"Preproc {split_name}\"):\n",
+    "        pid, pth = row[\"id\"], row[\"path\"]\n",
+    "        try:\n",
+    "            img = cv2.imread(pth, cv2.IMREAD_GRAYSCALE)\n",
+    "            if img is None:\n",
+    "                img = np.array(Image.open(pth).convert(\"L\"))\n",
+    "            if img is None or img.size == 0:\n",
+    "                raise RuntimeError(\"Cannot read image\")\n",
+    "\n",
+    "            # Resize + percentile clip + normalize\n",
+    "            img = smart_resize(img, RESIZE_HW)\n",
+    "            lo, hi = np.percentile(img, [P_LOW, P_HIGH])\n",
+    "            img = np.clip(img, lo, hi)\n",
+    "            img = (img - lo) / (hi - lo + 1e-6)  # [0,1]\n",
+    "\n",
+    "            # Save cache (z,y,x with z=1 to remain 3D-friendly)\n",
+    "            out_npz = CACHE_DIR / f\"{pid}.npz\"\n",
+    "            np.savez_compressed(\n",
+    "                out_npz,\n",
+    "                volume=img[None, ...].astype(np.float32),\n",
+    "                meta=json.dumps({\"id\": pid, \"src\": pth, \"resize\": RESIZE_HW, \"split\": split_name})\n",
+    "            )\n",
+    "\n",
+    "            if MAKE_THUMBS:\n",
+    "                cv2.imwrite(str(THUMBS_DIR / f\"{pid}.png\"), (img * 255).astype(\"uint8\"))\n",
+    "\n",
+    "            success.append({\"id\": pid, \"path\": pth, \"cache\": str(out_npz)})\n",
+    "        except Exception as e:\n",
+    "            failures.append({\n",
+    "                \"id\": pid, \"path\": pth, \"error\": repr(e),\n",
+    "                \"traceback\": \"\".join(traceback.format_exception(type(e), e, e.__traceback__))\n",
+    "            })\n",
+    "\n",
+    "    # Write per-split manifests\n",
+    "    pd.DataFrame(success).to_csv(mani_dir / f\"success_{MANI_TAG}_{split_name}.csv\", index=False)\n",
+    "    pd.DataFrame(failures).to_csv(mani_dir / f\"fail_{MANI_TAG}_{split_name}.csv\", index=False)\n",
+    "    print(f\"[{split_name}] Done. {len(success)} ✅, {len(failures)} ❌\")\n",
+    "    return len(success), len(failures)\n",
+    "\n",
+    "# Auto-detect val/valid and run both\n",
+    "train_index = mani_dir / \"index_xray_train.csv\"\n",
+    "val_index   = mani_dir / (\"index_xray_val.csv\" if (mani_dir / \"index_xray_val.csv\").exists()\n",
+    "                          else \"index_xray_valid.csv\")\n",
+    "\n",
+    "n_s_ok, n_s_fail = preprocess_split(\"train\", train_index)\n",
+    "n_v_ok, n_v_fail = preprocess_split(\"val\",   val_index)\n",
+    "\n",
+    "print(f\"All splits complete.\\n\"\n",
+    "      f\"train: {n_s_ok} ok, {n_s_fail} fail\\n\"\n",
+    "      f\"val:   {n_v_ok} ok, {n_v_fail} fail\")\n"
    ]
   },
   {
