simple cnn 10 epochs

--- a/02_SimpleCNN.ipynb
+++ b/02_SimpleCNN.ipynb
@@ -664,7 +664,7 @@
     {
       "cell_type": "code",
       "source": [
-        "num_epochs = 5\n",
+        "num_epochs = 10\n",
         "best_val_f1 = 0.0\n",
         "best_state = None\n",
         "\n",
@@ -695,19 +695,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe3e071a-29b2-4d8a-cd25-4f6a24ef3788"
+        "outputId": "3028992f-7a41-495b-d01d-35cf1d4f361c"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 01 Train loss 0.5662 acc 0.750 f1 0.000  Val loss 0.5532 acc 0.750 f1 0.000\n",
-            "Epoch 02 Train loss 0.5520 acc 0.750 f1 0.000  Val loss 0.5474 acc 0.750 f1 0.000\n",
-            "Epoch 03 Train loss 0.5450 acc 0.750 f1 0.002  Val loss 0.5380 acc 0.750 f1 0.000\n",
-            "Epoch 04 Train loss 0.5348 acc 0.751 f1 0.015  Val loss 0.5271 acc 0.750 f1 0.000\n",
-            "Epoch 05 Train loss 0.5270 acc 0.752 f1 0.044  Val loss 0.5157 acc 0.750 f1 0.000\n"
+            "Epoch 01 Train loss 0.5153 acc 0.754 f1 0.089  Val loss 0.5062 acc 0.751 f1 0.031\n",
+            "Epoch 02 Train loss 0.5108 acc 0.753 f1 0.109  Val loss 0.5006 acc 0.755 f1 0.075\n",
+            "Epoch 03 Train loss 0.5062 acc 0.755 f1 0.146  Val loss 0.4944 acc 0.758 f1 0.100\n",
+            "Epoch 04 Train loss 0.5005 acc 0.755 f1 0.190  Val loss 0.4956 acc 0.763 f1 0.159\n",
+            "Epoch 05 Train loss 0.4973 acc 0.757 f1 0.198  Val loss 0.4853 acc 0.764 f1 0.195\n",
+            "Epoch 06 Train loss 0.4940 acc 0.758 f1 0.219  Val loss 0.4791 acc 0.762 f1 0.154\n",
+            "Epoch 07 Train loss 0.4892 acc 0.759 f1 0.242  Val loss 0.4812 acc 0.769 f1 0.229\n",
+            "Epoch 08 Train loss 0.4879 acc 0.759 f1 0.244  Val loss 0.4757 acc 0.768 f1 0.207\n",
+            "Epoch 09 Train loss 0.4856 acc 0.760 f1 0.255  Val loss 0.4739 acc 0.769 f1 0.214\n",
+            "Epoch 10 Train loss 0.4828 acc 0.762 f1 0.263  Val loss 0.4740 acc 0.767 f1 0.214\n",
+            "Loaded best model with val F1: 0.22857142857142856\n"
           ]
         }
       ]
