--- a/Model_Faster_R_CNN.ipynb
+++ b/Model_Faster_R_CNN.ipynb
@@ -91,31 +91,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86,
-          "referenced_widgets": [
-            "22ca508dee6f4e6aa8fd61c260f86ba0",
-            "85026e7bed504292a1f9a7112f57ea5c",
-            "2e153cbea25244cd9c8b7177da35683f",
-            "cd19b1db949341aba15edc9b9a430301",
-            "10038a2de8a9433bad1f7b791a51456d",
-            "fc5b0f88d98340d8a82e0a7c4ce2e44b",
-            "0ab021c7c54c4c2a88a89b8f91a99b8a",
-            "748cc37b27e145378edf148efc73d397",
-            "a55f881eba4244fbb4757f6b0439c19b",
-            "d89356e164634eb4b7baf86bcf747e48",
-            "61b4a064ed2d412f856591f55a20fdb4",
-            "054edd00f449465b8e10c33ea94f8cf1",
-            "dc14791f5712420c9f683e6a01330f92",
-            "3e49c28bee2f4a039bda83a1d6994ffa",
-            "e12b10bfb695446daac18bff4da2b93a",
-            "10bdda048c8b4492bfb28fbf417d5db4",
-            "6fffb034d1b841568c2e25e5b7b6b089",
-            "582269abb3b14578b0eecf771df8556e",
-            "e8b3cb077188462a9209de70c14d4cea",
-            "a25e662e231b4fc19524e816d807c924",
-            "dddcabbd67dc48dcb49726759e26f8a1",
-            "f8ac9f4e3af24d40a0d3983ebdb7a3c9",
-            "2eca117babb646adb0f5ac9b552863a4"
-          ]
+          "referenced_widgets": []
         },
         "outputId": "f46a9b69-2161-4dfb-c53f-569b2fc8e91b"
       },
