Notebook clean up

--- a/Model_Faster_R_CNN.ipynb
+++ b/Model_Faster_R_CNN.ipynb
@@ -35,8 +35,7 @@
       "machine_shape": "hm",
       "gpuType": "A100"
     },
-    "accelerator": "GPU",
-    "widgets": {}
+    "accelerator": "GPU"
   },
   "nbformat_minor": 0,
   "nbformat": 4,
@@ -90,8 +89,7 @@
         "id": "LNNO2CtHHVAK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86,
-          "referenced_widgets": []
+          "height": 86
         },
         "outputId": "f46a9b69-2161-4dfb-c53f-569b2fc8e91b"
       },
