notebook titles/labels

--- a/00_CreatePrivateDataset.ipynb
+++ b/00_CreatePrivateDataset.ipynb
@@ -7,7 +7,11 @@
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
    },
    "source": [
-    "# Kaggle Notebook"
+    "# Create Your Own Private Subset Dataset for Cervical Spine Fracture Detection (Kaggle Notebook)\n",
+    "Before you get started, double-check you have the datasets loaded as Input (check right-hand side).\n",
+    "You want to make sure you have these datasets selected:\n",
+    "* rsna-2022-spine-fracture-detection-metadata\n",
+    "* RSNA 2022 Cervical Spine Fracture Detection"
    ]
   },
   {
