--- a/DataloadSetupForKaggle.ipynb
+++ b/DataloadSetupForKaggle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dataloader Tutorial\n",
+    "# Dataloader Tutorial (Kaggle Notebook)\n",
     "* To start a new notebook for model training, open a new Kaggle Notebook.\n",
     "* Add the created private dataset by clicking \"+ Add Input\" on the righ-side pane. You should see the fracture_dataset_subset.h5 file there.\n",
     "\n",
