--- a/00_CreatePrivateDataset.ipynb
+++ b/00_CreatePrivateDataset.ipynb
@@ -1079,6 +1079,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔑 Workaround: Creating a Private Dataset with `kaggle.json`\n",
+    "\n",
+    "If you are experiencing issues with the Secret add-on feature in Kaggle Notebooks, you can use a **private Kaggle Dataset** to securely store and access your `kaggle.json` file.\n",
+    "\n",
+    "#### Steps to Create the Dataset:\n",
+    "\n",
+    "1.  **Locate Your File:** Find the **`kaggle.json`** file you just downloaded on your computer.\n",
+    "2.  **Navigate to Dataset Creation:** Go to the Kaggle website and click **\"Create\"** in the top navigation bar, then select **\"New Dataset\"**.\n",
+    "3.  **Upload the File:**\n",
+    "    * Click **\"Upload File\"**.\n",
+    "    * Select and upload your **`kaggle.json`** file.\n",
+    "4.  **Configure Dataset Settings:**\n",
+    "    * **Title:** Give your dataset a descriptive name, like **`Kaggle API Key`**.\n",
+    "    * **Visibility:** **CRITICALLY IMPORTANT:** Ensure the visibility is set to **\"Private\"**. This keeps your API key secure. \n",
+    "5.  **Create and Finalize:** Click the **\"Create\"** or **\"Publish\"** button to finalize the dataset creation.\n",
+    "\n",
+    "#### Steps to Use the Dataset in Your Notebook:\n",
+    "\n",
+    "1.  **Open Your Notebook:** Open the Kaggle Notebook where you need to use the API key.\n",
+    "2.  **Add the Data:** In the right-hand panel of the notebook editor, click on **\"+ Add data\"**.\n",
+    "3.  **Search and Select:** Search for the private dataset you just created (e.g., `Kaggle API Key`) under the **\"Your Datasets\"** tab and select it.\n",
+    "4.  **Access the Key:** Once the dataset is added, your `kaggle.json` file will be accessible in the notebook's file system, typically under the path:\n",
+    "    ```\n",
+    "    /kaggle/input/<your-dataset-name>/kaggle.json\n",
+    "    ```\n",
+    "    You can then modify your script to load the credentials from this path instead of relying on the Secret add-on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
