--- a/dataload_examples/DataloadSetupForColab.ipynb
+++ b/dataload_examples/DataloadSetupForColab.ipynb
@@ -10,6 +10,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This notebook demonstrates how to go about loading the data from the private Kaggle dataset you had created in notebook 00. Here, we show you how to import the GitHub repository dataloader script into your notebook on Google Colab, how to view data samples from the preprocessed h5 file, and how to get the dataloaders based on the task at hand: 'classification' or 'detection'."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
